--- a/FingerprintIdentifyLib/build.gradle
+++ b/FingerprintIdentifyLib/build.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 28
+    namespace 'com.wei.android.lib.fingerprintidentify'
 
+    compileSdkVersion 33
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -27,19 +25,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-}
-
-publish {
-    userOrg = 'uccmawei'
-    groupId = 'com.wei.android.lib'
-    artifactId = 'fingerprintidentify'
-    publishVersion = '1.2.6'
-    desc = 'Android fingerprint api for Android, Samsung, MeiZu.'
-    website = 'https://github.com/uccmawei/FingerprintIdentify'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
