Support Biometric api

--- a/FingerprintIdentifyLib/build.gradle
+++ b/FingerprintIdentifyLib/build.gradle
@@ -27,4 +27,5 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.biometric:biometric:1.1.0'
 }
