--- a/FingerprintIdentifyLib/src/main/AndroidManifest.xml
+++ b/FingerprintIdentifyLib/src/main/AndroidManifest.xml
@@ -1,1 +1,5 @@
-<manifest package="com.wei.android.lib.fingerprintidentify" />
+<manifest package="com.wei.android.lib.fingerprintidentify"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+</manifest>
