--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.scijava.org/content/repositories/public' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
