--- a/FingerprintIdentifyLib/build.gradle
+++ b/FingerprintIdentifyLib/build.gradle
@@ -5,7 +5,8 @@ android {
 
     compileSdk 34
     defaultConfig {
-        minSdkVersion 14
+        minSdk 14
+        targetSdk 34
         versionCode 1
         versionName "1.0"
     }
