--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
     compileSdk 34
     defaultConfig {
         applicationId "com.wei.android.lib.fingerprintidentify.demo"
-        minSdkVersion 21
+        minSdk 21
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
